--- a/src/App.scss
+++ b/src/App.scss
@@ -1,41 +1,89 @@
 @import './style/variables';
 
+@mixin animationSideBar($value...) {
+-webkit-transition: $value;
+-moz-transition: $value;
+-o-transition: $value;
+transition: $value;
+}
+
+@mixin animationMenuBtn($value) {
+  -ms-transform: rotate($value);
+  -webkit-transform: rotate($value);
+  -o-transform: rotate($value);
+  transform: rotate($value);
+}
+
+
+
 #row-1{
   display:flex;
-  justify-content: space-between;
+  align-items: center;
   height: $nav-mobile-height+16px;
-  .menu-btn{
-    line-height: 1px;
+  .menu-logo{
     height: $nav-mobile-height;
     width:$nav-mobile-height;
-    margin: 9px auto 5px 24px;
+    margin-left: 20px;
+    justify-content: flex-start;
     background-image: $logo-SVG2;
     background-size: contain;
     background-repeat: no-repeat;
   }
-  .menu-btn2{
-    height:100%;
-    width:100px;
-    line-height: 1px;
-    background-color: blue;
-  }
-  .nav-btns-cont{
-    height:100%;
-    width:100px;
-    background-color: yellow;
-    .nav-btns{
-      border:none;
+  @for $i from 0 through 1 {
+    .nav-btns-cont#{$i}{
+      display:flex;
+      align-items: center;
+      position: absolute;
+      justify-content: flex-end;
+      right: ($side-nav-right)+(($side-nav-right*(-1))*$i);
+      @include animationSideBar(all 0.5s ease);
+      .menu-btn#{$i}{
+        height:55px;
+        width:55px;
+        margin-left: 10px;
+        @include animationMenuBtn(90deg*((-1)*$i))
+        background-image: $menu-SVG;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      .nav-btns{
+        height:60px;
+        width:60px;
+        border-radius: 50%;
+        margin-left: 20px;
+        p{
+          font-size: 14px;
+          font-weight: bold;
+          text-transform: uppercase;
+          text-align: center;
+          vertical-align: middle;
+        }
+      }
       .nav-btn1-colr{
-        color: red;
-        text-decoration: none;
+        background-color: $main-color;
+        border: 1px solid white;
+        color: white;
+        &:hover{
+          background-color: black;
+          border: 3px solid $main-color;
+          color: $main-color;
+          font-family: Georgia, "Times New Roman", Times, serif;
+        }
       }
       .nav-btn2-colr{
-        color: purple;
-        text-decoration: none;
+        background-color: white;
+        border: 2px solid $main-color;
+        color: $main-color;
+        &:hover{
+          background-color: black;
+          border: 3px solid $main-color;
+          color: white;
+        }
       }
     }
-  }
+  }//end of for
 }
+
 #row-2{
 
 }
