--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,4 +1,6 @@
-$main-color: '#00ed00ff';
+$main-color: rgba(0,237,0,255);
 $logo-SVG: url("components/images/ultraTreningLogo1.svg");
 $logo-SVG2: url("components/images/ultraTreningLogo2.svg");
+$menu-SVG: url("components/images/menuBtn.svg");
 $nav-mobile-height: 70px;
+$side-nav-right: -150px;
