--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box; }
-
 #row-1 {
   background-color: white;
   display: flex;
@@ -43,6 +38,7 @@
       border-radius: 50%;
       margin-left: 20px; }
       #row-1 .nav-btns-cont0 .nav-btns p {
+        margin-top: 13px;
         font-size: 14px;
         font-weight: bold;
         text-transform: uppercase;
@@ -92,6 +88,7 @@
       border-radius: 50%;
       margin-left: 20px; }
       #row-1 .nav-btns-cont1 .nav-btns p {
+        margin-top: 13px;
         font-size: 14px;
         font-weight: bold;
         text-transform: uppercase;
@@ -119,3 +116,56 @@
   height: 1200px;
   background-image: url("components/images/backgroundMain1.svg");
   background-size: contain; }
+
+.container {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto; }
+  .container [class*="col-"] {
+    min-height: 1px;
+    width: 100%;
+    height: 100%; }
+  .container .col-1 {
+    width: 8.33333%;
+    min-height: 1px; }
+  .container .col-2 {
+    width: 16.66667%;
+    min-height: 1px; }
+  .container .col-3 {
+    width: 25%;
+    min-height: 1px; }
+  .container .col-4 {
+    width: 33.33333%;
+    min-height: 1px; }
+  .container .col-5 {
+    width: 41.66667%;
+    min-height: 1px; }
+  .container .col-6 {
+    width: 50%;
+    min-height: 1px; }
+  .container .col-7 {
+    width: 58.33333%;
+    min-height: 1px; }
+  .container .col-8 {
+    width: 66.66667%;
+    min-height: 1px; }
+  .container .col-9 {
+    width: 75%;
+    min-height: 1px; }
+  .container .col-10 {
+    width: 83.33333%;
+    min-height: 1px; }
+  .container .col-11 {
+    width: 91.66667%;
+    min-height: 1px; }
+  .container .col-12 {
+    width: 100%;
+    min-height: 1px; }
+  .container .row {
+    display: flex;
+    flex-wrap: wrap; }
+
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box; }
