--- a/src/App.scss
+++ b/src/App.scss
@@ -1,92 +1,9 @@
-@import './style/variables';
-@import './style/mixins';
+@import './scss/partials/navStyle';
+@import './scss/partials/homeStyle';
+@import './scss/grid/grid';
 
 *{
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-}
-#row-1{
-  background-color: white;
-  display:flex;
-  align-items: center;
-  height: $nav-mobile-height+16px;
-  .menu-logo{
-    height: $nav-mobile-height;
-    width:$nav-mobile-height;
-    margin-left: 20px;
-    justify-content: flex-start;
-    background-image: $logo-SVG2;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  @for $i from 0 through 1 {
-    .nav-btns-cont#{$i}{
-      // background-color: blue;
-      height: $nav-mobile-height+16px;
-      display:flex;
-      align-items: center;
-      position: absolute;
-      right: ($side-nav-right)+(($side-nav-right*(-1))*$i);
-      @include animationSideBar(all 0.5s ease);
-      .menu-btn#{$i}{
-        height:55px;
-        width:55px;
-        margin-left: 10px;
-  //       -webkit-animation: rotation 2s infinite linear;
-  //       @-webkit-keyframes rotation {
-  //     from {
-  //         -webkit-transform: rotate(0deg);
-  //     }
-  //     to {
-  //         -webkit-transform: rotate(359deg);
-  //     }
-  // }
-        @include animationMenuBtn(90deg*((-1)*$i))
-        background-image: $menu-SVG;
-        background-size: contain;
-        background-repeat: no-repeat;
-      }
-      .nav-btns{
-        height:60px;
-        width:60px;
-        border-radius: 50%;
-        margin-left: 20px;
-        p{
-          font-size: 14px;
-          font-weight: bold;
-          text-transform: uppercase;
-          text-align: center;
-          vertical-align: middle;
-        }
-      }
-      .nav-btn1-colr{
-        background-color: $main-color;
-        border: 1px solid white;
-        color: white;
-        &:hover{
-          background-color: black;
-          border: 3px solid $main-color;
-          color: $main-color;
-          font-family: Georgia, "Times New Roman", Times, serif;
-        }
-      }
-      .nav-btn2-colr{
-        background-color: white;
-        border: 2px solid $main-color;
-        color: $main-color;
-        &:hover{
-          background-color: black;
-          border: 3px solid $main-color;
-          color: white;
-        }
-      }
-    }
-  }//end of for
-}
-
-.home-class{
-  height: 1200px;
-  background-image: $backgroundMain1-SVG;
-  background-size: contain;
 }
