--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,17 @@
   background-color: white;
   display: flex;
   align-items: center;
-  height: 86px; }
+  height: 86px;
+  -webkit-box-shadow: 0px 3px 4px 0 #888888;
+  -moz-box-shadow: 0px 3px 4px 0 #888888;
+  -o-transform: 0px 3px 4px 0 #888888;
+  box-shadow: 0px 3px 4px 0 #888888; }
   #row-1 .menu-logo {
     height: 70px;
     width: 70px;
     margin-left: 20px;
     justify-content: flex-start;
-    background-image: url("components/images/ultraTreningLogo2.svg");
+    background-image: url("./components/images/ultraTreningLogo2.svg");
     background-size: contain;
     background-repeat: no-repeat; }
   #row-1 .nav-btns-cont0 {
@@ -16,7 +20,7 @@
     display: flex;
     align-items: center;
     position: absolute;
-    right: -150px;
+    right: -145px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -29,7 +33,7 @@
       -webkit-transform: rotate(0deg);
       -o-transform: rotate(0deg);
       transform: rotate(0deg);
-      background-image: url("components/images/menuBtn.svg");
+      background-image: url("./components/images/menuBtn.svg");
       background-size: contain;
       background-repeat: no-repeat; }
     #row-1 .nav-btns-cont0 .nav-btns {
@@ -79,7 +83,7 @@
       -webkit-transform: rotate(-90deg);
       -o-transform: rotate(-90deg);
       transform: rotate(-90deg);
-      background-image: url("components/images/menuBtn.svg");
+      background-image: url("./components/images/menuBtn.svg");
       background-size: contain;
       background-repeat: no-repeat; }
     #row-1 .nav-btns-cont1 .nav-btns {
@@ -112,9 +116,12 @@
         border: 3px solid #00ed00;
         color: white; }
 
+.welcome-text {
+  background-color: yellow; }
+
 .home-class {
   height: 1200px;
-  background-image: url("components/images/backgroundMain1.svg");
+  background-image: url("./components/images/backgroundMain1.svg");
   background-size: contain; }
 
 .container {
