--- a/src/scss/modules/_mixins.scss
+++ b/src/scss/modules/_mixins.scss
@@ -11,3 +11,10 @@ transition: $value;
   -o-transform: rotate($value);
   transform: rotate($value);
 }
+
+@mixin boxShadow($color) {
+-webkit-box-shadow: 0px 3px 4px 0 $color;
+-moz-box-shadow: 0px 3px 4px 0 $color;
+-o-transform: 0px 3px 4px 0 $color;
+box-shadow: 0px 3px 4px 0 $color;
+}
