--- a/src/style/_navStyle.scss
+++ b/src/style/_navStyle.scss
@@ -3,15 +3,11 @@
 
 #row-1{
   background-color: white;
-  display:flex;
-  align-items: center;
   height: $nav-mobile-height+16px;
-  @include boxShadow(#888888);
   .menu-logo{
     height: $nav-mobile-height;
     width:$nav-mobile-height;
     margin-left: 20px;
-    justify-content: flex-start;
     background-image: $logo-SVG2;
     background-size: contain;
     background-repeat: no-repeat;
@@ -20,15 +16,12 @@
     .nav-btns-cont#{$i}{
       // background-color: blue;
       height: $nav-mobile-height+16px;
-      display:flex;
-      align-items: center;
-      position: absolute;
+      position: relative;
       right: ($side-nav-right)+(($side-nav-right*(-1))*$i);
       @include animationSideBar(all 0.5s ease);
       .menu-btn#{$i}{
         height:55px;
         width:55px;
-        margin-left: 10px;
   //       -webkit-animation: rotation 2s infinite linear;
   //       @-webkit-keyframes rotation {
   //     from {
@@ -47,7 +40,6 @@
         height:60px;
         width:60px;
         border-radius: 50%;
-        margin-left: 20px;
         p{
           margin-top: 13px;
           font-size: 14px;
@@ -72,6 +64,7 @@
         background-color: white;
         border: 2px solid $main-color;
         color: $main-color;
+
         &:hover{
           background-color: black;
           border: 3px solid $main-color;
