--- a/src/style/_navStyle.scss
+++ b/src/style/_navStyle.scss
@@ -57,7 +57,7 @@
           background-color: black;
           border: 3px solid $main-color;
           color: $main-color;
-          font-family: Georgia, "Times New Roman", Times, serif;
+          font-family: $main-font;
         }
       }
       .nav-btn2-colr{
