--- a/src/App.css
+++ b/src/App.css
@@ -116,13 +116,58 @@
         border: 3px solid #00ed00;
         color: white; }
 
-.welcome-text {
-  background-color: yellow; }
+.welcome-text-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; }
+  .welcome-text-container .welcome-text {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 100px; }
+  .welcome-text-container p {
+    margin: auto auto auto 20px;
+    font-size: 35px;
+    font-weight: bold;
+    font: Georgia, "Times New Roman", Times, serif; }
+  .welcome-text-container .welcome-btn {
+    margin: 30px auto auto auto;
+    background-color: #00ed00;
+    width: 200px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 600; }
+    .welcome-text-container .welcome-btn:hover {
+      background-color: #00d700; }
+  .welcome-text-container .move-down-btn {
+    margin: 90px auto auto auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #001400;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    font-size: 30px;
+    font: Georgia, "Times New Roman", Times, serif; }
 
 .home-class {
-  height: 1200px;
+  height: 100vh;
   background-image: url("./components/images/backgroundMain1.svg");
   background-size: contain; }
+
+.welcome-text2 {
+  background-color: green; }
+
+.home-class2 {
+  height: 100vh; }
 
 .container {
   width: 100%;
