--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -1,7 +1,10 @@
 $main-color: rgba(0,237,0,255);
+$main-color-hover: rgba(0,215,0,255);
+$main-font:Georgia, "Times New Roman", Times, serif;
 $logo-SVG: url("./components/images/ultraTreningLogo1.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
 $menu-SVG:  url("./components/images/menuBtn.svg");
 $nav-mobile-height: 70px;
+$nav-mobile-heightmargin: 16px;
 $side-nav-right: -145px;
