--- a/src/App.css
+++ b/src/App.css
@@ -117,46 +117,61 @@
         color: white; }
 
 .welcome-text-container {
+  border: 1px solid brown;
   display: flex;
-  justify-content: center;
-  align-items: flex-start; }
+  flex-direction: column; }
   .welcome-text-container .welcome-text {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 100px; }
-  .welcome-text-container p {
-    margin: auto auto auto 20px;
-    font-size: 35px;
-    font-weight: bold;
-    font: Georgia, "Times New Roman", Times, serif; }
-  .welcome-text-container .welcome-btn {
-    margin: 30px auto auto auto;
-    background-color: #00ed00;
-    width: 200px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 600; }
-    .welcome-text-container .welcome-btn:hover {
-      background-color: #00d700; }
-  .welcome-text-container .move-down-btn {
-    margin: 90px auto auto auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: #001400;
-    width: 50px;
-    height: 50px;
-    border-radius: 30px;
-    font-size: 30px;
-    font: Georgia, "Times New Roman", Times, serif; }
+    width: 100%;
+    margin: 180px auto auto auto;
+    border: 1px solid blue; }
+    .welcome-text-container .welcome-text p {
+      margin: auto auto auto 20px;
+      font-size: 35px;
+      font-weight: bold;
+      font: Georgia, "Times New Roman", Times, serif; }
+    .welcome-text-container .welcome-text .welcome-btn {
+      margin: 30px auto auto auto;
+      background-color: #00ed00;
+      width: 200px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 10px;
+      text-transform: uppercase;
+      font-size: 18px;
+      font-weight: bold; }
+      .welcome-text-container .welcome-text .welcome-btn:hover {
+        background-color: #00d700; }
+  .welcome-text-container .move-down-container {
+    width: 100%;
+    border: 1px solid red; }
+    .welcome-text-container .move-down-container .move-down-btn {
+      margin: 0px auto auto auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      background-color: #001400;
+      width: 50px;
+      height: 50px;
+      border-radius: 30px;
+      font-size: 30px;
+      font: Georgia, "Times New Roman", Times, serif; }
+
+.show-return-btn {
+  color: white;
+  background-color: #00ed00;
+  background-image: url("./components/images/arrowTop.svg");
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  font-weight: 600;
+  font: Georgia, "Times New Roman", Times, serif;
+  position: fixed;
+  left: 0;
+  top: 50vh;
+  text-transform: uppercase; }
 
 .home-class {
   height: 100vh;
