--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -4,7 +4,10 @@ $main-font:Georgia, "Times New Roman", Times, serif;
 $logo-SVG: url("./components/images/ultraTreningLogo1.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
+$arrowTop-SVG: url("./components/images/arrowTop.svg");
+$more-SVG: url("./components/images/more.svg");
 $menu-SVG:  url("./components/images/menuBtn.svg");
 $nav-mobile-height: 70px;
 $nav-mobile-heightmargin: 16px;
+$nav-mobile-heightplusmargin: 86px;
 $side-nav-right: -145px;
