--- a/src/scss/partials/_homeStyle.scss
+++ b/src/scss/partials/_homeStyle.scss
@@ -1,52 +1,67 @@
 @import "../modules/variables";
 
 .welcome-text-container{
-  display:flex;
-  justify-content: center;
-  align-items: flex-start;
-
+  border:1px solid brown;
+  display: flex;
+  flex-direction: column;
   .welcome-text{
-    align-items: center;
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 100px;
-  }
-  p{
-    margin: auto auto auto 20px;
-    font-size: 35px;
-    font-weight: bold;
-    font: $main-font;
-  }
-  .welcome-btn{
-    margin: 30px auto auto auto;
-    background-color: $main-color;
-    width:200px;
-    height:60px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 600;
-    &:hover{
-      background-color: $main-color-hover
+    width:100%;
+    margin: 180px auto auto auto;
+    border:1px solid blue;
+    p{
+      margin: auto auto auto 20px;
+      font-size: 35px;
+      font-weight: bold;
+      font: $main-font;
+    }
+    .welcome-btn{
+      margin: 30px auto auto auto;
+      background-color: $main-color;
+      width:200px;
+      height:60px;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 10px;
+      text-transform: uppercase;
+      font-size: 18px;
+      font-weight: bold;
+      &:hover{
+        background-color: $main-color-hover
+      }
     }
   }
-  .move-down-btn{
-    margin: 90px auto auto auto;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    color:white;
-    background-color: rgba(0,20,0,100);
-    width:50px;
-    height:50px;
-    border-radius: 30px;
-    font-size: 30px;
-    font: $main-font;
+  .move-down-container{
+    width:100%;
+    border:1px solid red;
+    .move-down-btn{
+      margin: 0px auto auto auto;
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      color:white;
+      background-color: rgba(0,20,0,100);
+      width:50px;
+      height:50px;
+      border-radius: 30px;
+      font-size: 30px;
+      font: $main-font;
+    }
   }
+}
+.show-return-btn{
+  color:white;
+  background-color: $main-color;
+  background-image: $arrowTop-SVG;
+  width:50px;
+  height:50px;
+  font-size: 30px;
+  font-weight: 600;
+  font: $main-font;
+  position:fixed;
+  left:0;
+  top:50vh;
+  text-transform: uppercase;
 }
 
 .home-class{
@@ -54,7 +69,6 @@
   background-image: $backgroundMain1-SVG;
   background-size: contain;
 }
-
 .welcome-text2{
   background-color: green;
 }
