--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,21 @@
   background-color: white;
   display: flex;
   align-items: center;
-  height: 86px;
+  height: 66px;
   -webkit-box-shadow: 0px 3px 4px 0 #888888;
   -moz-box-shadow: 0px 3px 4px 0 #888888;
   -o-transform: 0px 3px 4px 0 #888888;
   box-shadow: 0px 3px 4px 0 #888888; }
   #row-1 .menu-logo {
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
     margin-left: 20px;
     justify-content: flex-start;
     background-image: url("./components/images/ultraTreningLogo2.svg");
     background-size: contain;
     background-repeat: no-repeat; }
   #row-1 .nav-btns-cont0 {
-    height: 86px;
+    height: 66px;
     display: flex;
     align-items: center;
     position: absolute;
@@ -66,7 +66,7 @@
         border: 3px solid #00ed00;
         color: white; }
   #row-1 .nav-btns-cont1 {
-    height: 86px;
+    height: 66px;
     display: flex;
     align-items: center;
     position: absolute;
@@ -116,20 +116,27 @@
         border: 3px solid #00ed00;
         color: white; }
 
-.welcome-text-container {
+.home-class {
+  height: 100vh;
+  background-image: url("./components/images/backgroundMain2.svg");
+  background-color: black;
+  background-size: contain; }
+
+.welcome-text-cnt {
   border: 1px solid brown;
   display: flex;
   flex-direction: column; }
-  .welcome-text-container .welcome-text {
+  .welcome-text-cnt .welcome-text {
     width: 100%;
     margin: 180px auto auto auto;
     border: 1px solid blue; }
-    .welcome-text-container .welcome-text p {
+    .welcome-text-cnt .welcome-text p {
       margin: auto auto auto 20px;
       font-size: 35px;
       font-weight: bold;
-      font: Georgia, "Times New Roman", Times, serif; }
-    .welcome-text-container .welcome-text .welcome-btn {
+      font: Georgia, "Times New Roman", Times, serif;
+      color: white; }
+    .welcome-text-cnt .welcome-text .welcome-btn {
       margin: 30px auto auto auto;
       background-color: #00ed00;
       width: 200px;
@@ -141,48 +148,142 @@
       text-transform: uppercase;
       font-size: 18px;
       font-weight: bold; }
-      .welcome-text-container .welcome-text .welcome-btn:hover {
+      .welcome-text-cnt .welcome-text .welcome-btn:hover {
         background-color: #00d700; }
-  .welcome-text-container .move-down-container {
+  .welcome-text-cnt .move-down-cnt {
     width: 100%;
     border: 1px solid red; }
-    .welcome-text-container .move-down-container .move-down-btn {
+    .welcome-text-cnt .move-down-cnt .move-down-btn {
       margin: 0px auto auto auto;
       display: flex;
       justify-content: center;
       align-items: center;
-      color: white;
-      background-color: #001400;
+      color: black;
+      background-color: white;
       width: 50px;
       height: 50px;
       border-radius: 30px;
       font-size: 30px;
       font: Georgia, "Times New Roman", Times, serif; }
 
+#welcome-encourage-break {
+  height: 10vh;
+  background-image: url("./components/images/break-to-encoMobile.svg");
+  background-size: cover; }
+
+#encourage-advantage-break {
+  height: 10vh;
+  background-position: center;
+  background-image: url("./components/images/break-to-advMobile.svg");
+  background-size: cover; }
+
+.encourage-class {
+  height: 40vh; }
+
+#encourage-entry {
+  background-image: url("./components/images/backgroundMain1.svg");
+  background-color: white;
+  background-size: contain;
+  background-attachment: fixed; }
+
+.encourage-text-cnt {
+  border: 1px solid brown;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .encourage-text-cnt .encourage-text {
+    width: 100%;
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: column; }
+    .encourage-text-cnt .encourage-text p {
+      margin: auto auto auto 20px;
+      font-size: 30px;
+      font-weight: bold;
+      text-transform: uppercase;
+      font: Georgia, "Times New Roman", Times, serif;
+      color: black; }
+    .encourage-text-cnt .encourage-text .moving-numbers0 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      text-transform: lowercase;
+      color: #00ed00;
+      font-size: 20px;
+      border: 1px solid brown; }
+      .encourage-text-cnt .encourage-text .moving-numbers0 p {
+        font-size: 20px;
+        text-transform: lowercase; }
+    .encourage-text-cnt .encourage-text strong {
+      font-size: 20px; }
+    .encourage-text-cnt .encourage-text .moving-numbers1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      text-transform: lowercase;
+      color: #00ed00;
+      font-size: 28px;
+      border: 1px solid brown; }
+      .encourage-text-cnt .encourage-text .moving-numbers1 p {
+        font-size: 20px;
+        text-transform: lowercase; }
+    .encourage-text-cnt .encourage-text strong {
+      font-size: 20px; }
+    .encourage-text-cnt .encourage-text .moving-numbers2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      text-transform: lowercase;
+      color: #00ed00;
+      font-size: 36px;
+      border: 1px solid brown; }
+      .encourage-text-cnt .encourage-text .moving-numbers2 p {
+        font-size: 20px;
+        text-transform: lowercase; }
+    .encourage-text-cnt .encourage-text strong {
+      font-size: 20px; }
+    .encourage-text-cnt .encourage-text .moving-numbers3 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      text-transform: lowercase;
+      color: #00ed00;
+      font-size: 44px;
+      border: 1px solid brown; }
+      .encourage-text-cnt .encourage-text .moving-numbers3 p {
+        font-size: 20px;
+        text-transform: lowercase; }
+    .encourage-text-cnt .encourage-text strong {
+      font-size: 20px; }
+
+.advantage-class {
+  height: 50vh;
+  background-image: url("./components/images/backgroundMain1.svg");
+  background-color: #00ed00;
+  background-size: contain; }
+
 .show-return-btn {
   color: white;
   background-color: #00ed00;
   background-image: url("./components/images/arrowTop.svg");
-  width: 50px;
-  height: 50px;
+  background-size: contain;
+  width: 40px;
+  height: 40px;
   font-size: 30px;
   font-weight: 600;
   font: Georgia, "Times New Roman", Times, serif;
   position: fixed;
   left: 0;
-  top: 50vh;
-  text-transform: uppercase; }
-
-.home-class {
-  height: 100vh;
-  background-image: url("./components/images/backgroundMain1.svg");
-  background-size: contain; }
-
-.welcome-text2 {
-  background-color: green; }
-
-.home-class2 {
-  height: 100vh; }
+  top: 30vh;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px 3px 4px 0 grey;
+  -moz-box-shadow: 0px 3px 4px 0 grey;
+  -o-transform: 0px 3px 4px 0 grey;
+  box-shadow: 0px 3px 4px 0 grey; }
 
 .container {
   width: 100%;
