--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -4,10 +4,17 @@ $main-font:Georgia, "Times New Roman", Times, serif;
 $logo-SVG: url("./components/images/ultraTreningLogo1.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
+$backgroundMain2-SVG: url("./components/images/backgroundMain2.svg");
+
+$break-to-adv-SVG: url("./components/images/break-to-adv.svg");
+$break-to-enco-SVG: url("./components/images/break-to-enco.svg");
+$break-to-advMobile-SVG: url("./components/images/break-to-advMobile.svg");
+$break-to-encoMobile-SVG: url("./components/images/break-to-encoMobile.svg");
+
 $arrowTop-SVG: url("./components/images/arrowTop.svg");
 $more-SVG: url("./components/images/more.svg");
 $menu-SVG:  url("./components/images/menuBtn.svg");
-$nav-mobile-height: 70px;
+$nav-mobile-height: 50px;
 $nav-mobile-heightmargin: 16px;
-$nav-mobile-heightplusmargin: 86px;
+$nav-mobile-heightplusmargin: 66px;
 $side-nav-right: -145px;
