--- a/src/scss/partials/_homeStyle.scss
+++ b/src/scss/partials/_homeStyle.scss
@@ -1,6 +1,14 @@
 @import "../modules/variables";
+@import "../modules/mixins";
 
-.welcome-text-container{
+//STYLING FIRST SECTION
+.home-class{
+  height: 100vh;
+  background-image: $backgroundMain2-SVG;
+  background-color: black;
+  background-size: contain;
+}
+.welcome-text-cnt{
   border:1px solid brown;
   display: flex;
   flex-direction: column;
@@ -13,6 +21,7 @@
       font-size: 35px;
       font-weight: bold;
       font: $main-font;
+      color:white;
     }
     .welcome-btn{
       margin: 30px auto auto auto;
@@ -31,7 +40,7 @@
       }
     }
   }
-  .move-down-container{
+  .move-down-cnt{
     width:100%;
     border:1px solid red;
     .move-down-btn{
@@ -39,8 +48,8 @@
       display:flex;
       justify-content: center;
       align-items: center;
-      color:white;
-      background-color: rgba(0,20,0,100);
+      color:black;
+      background-color: white;
       width:50px;
       height:50px;
       border-radius: 30px;
@@ -49,29 +58,109 @@
     }
   }
 }
+
+//SECTION 2 BREAKING DIV WITH CURVED LINE
+
+#welcome-encourage-break{
+  height: 10vh;
+  background-image: $break-to-encoMobile-SVG;
+  background-size: cover;
+}
+
+#encourage-advantage-break{
+  height: 10vh;
+  background-position: center;
+  background-image: $break-to-advMobile-SVG;
+  background-size: cover;
+}
+
+//SECTION 2 STYLING
+
+.encourage-class{
+  height: 40vh;
+
+}
+#encourage-entry{
+  background-image: $backgroundMain1-SVG;
+  background-color: white;
+  background-size: contain;
+  background-attachment: fixed;
+}
+
+.encourage-text-cnt{
+  border:1px solid brown;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .encourage-text{
+    width:100%;
+    border:1px solid blue;
+    display: flex;
+    flex-direction: column;
+    p{
+      margin: auto auto auto 20px;
+      font-size: 30px;
+      font-weight: bold;
+      text-transform: uppercase;
+      font: $main-font;
+      color:black;    }
+    // .staying-numbers{
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   font-weight: bold;
+    //   text-transform: lowercase;
+    //   color:$main-color;
+    //   font-size: 20px;
+    //   border:1px solid brown;
+    // }
+
+    @for $i from 0 through 3 {
+      .moving-numbers#{$i}{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        text-transform: lowercase;
+        color:$main-color;
+        font-size: 20px+(8px*$i);
+        border:1px solid brown;
+
+        p{
+          font-size: 20px;
+          text-transform: lowercase;
+        }
+    }
+    strong{
+      font-size: 20px;    }
+  }
+}
+}
+
+//SECTION 3 STYLING
+
+.advantage-class{
+  height: 50vh;
+  background-image: $backgroundMain1-SVG;
+  background-color: $main-color;
+  background-size: contain;
+}
+
+// FIXED BTN TO RETURN TO THE INITIAL POSITION
+
 .show-return-btn{
-  color:white;
+  color: white;
   background-color: $main-color;
   background-image: $arrowTop-SVG;
-  width:50px;
-  height:50px;
+  background-size: contain;
+  width:40px;
+  height:40px;
   font-size: 30px;
   font-weight: 600;
   font: $main-font;
   position:fixed;
   left:0;
-  top:50vh;
+  top:30vh;
   text-transform: uppercase;
-}
-
-.home-class{
-  height: 100vh;
-  background-image: $backgroundMain1-SVG;
-  background-size: contain;
-}
-.welcome-text2{
-  background-color: green;
-}
-.home-class2{
-  height: 100vh;
+  @include boxShadow(grey);
 }
