--- a/src/App.css
+++ b/src/App.css
@@ -123,21 +123,19 @@
   background-size: contain; }
 
 .welcome-text-cnt {
-  border: 1px solid brown;
   display: flex;
   flex-direction: column; }
   .welcome-text-cnt .welcome-text {
     width: 100%;
-    margin: 180px auto auto auto;
-    border: 1px solid blue; }
+    margin: 180px auto auto auto; }
     .welcome-text-cnt .welcome-text p {
       margin: auto auto auto 20px;
-      font-size: 35px;
+      font-size: 38px;
       font-weight: bold;
       font: Georgia, "Times New Roman", Times, serif;
       color: white; }
     .welcome-text-cnt .welcome-text .welcome-btn {
-      margin: 30px auto auto auto;
+      margin: 80px auto auto auto;
       background-color: #00ed00;
       width: 200px;
       height: 60px;
@@ -151,10 +149,9 @@
       .welcome-text-cnt .welcome-text .welcome-btn:hover {
         background-color: #00d700; }
   .welcome-text-cnt .move-down-cnt {
-    width: 100%;
-    border: 1px solid red; }
+    width: 100%; }
     .welcome-text-cnt .move-down-cnt .move-down-btn {
-      margin: 0px auto auto auto;
+      margin: 0px auto 8px auto;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -167,42 +164,41 @@
       font: Georgia, "Times New Roman", Times, serif; }
 
 #welcome-encourage-break {
+  margin-top: -3px;
   height: 10vh;
   background-image: url("./components/images/break-to-encoMobile.svg");
   background-size: cover; }
 
 #encourage-advantage-break {
+  margin-bottom: -3px;
   height: 10vh;
   background-position: center;
   background-image: url("./components/images/break-to-advMobile.svg");
   background-size: cover; }
 
 .encourage-class {
-  height: 40vh; }
+  height: 60vh; }
 
 #encourage-entry {
-  background-image: url("./components/images/backgroundMain1.svg");
+  background-image: url("./components/images/backgroundsection2.svg");
   background-color: white;
   background-size: contain;
   background-attachment: fixed; }
 
 .encourage-text-cnt {
-  border: 1px solid brown;
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center; }
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
   .encourage-text-cnt .encourage-text {
-    width: 100%;
-    border: 1px solid blue;
     display: flex;
-    flex-direction: column; }
-    .encourage-text-cnt .encourage-text p {
-      margin: auto auto auto 20px;
-      font-size: 30px;
-      font-weight: bold;
-      text-transform: uppercase;
-      font: Georgia, "Times New Roman", Times, serif;
-      color: black; }
+    flex-wrap: wrap;
+    margin: auto auto auto 20px;
+    font-size: 30px;
+    font-weight: bold;
+    font: Georgia, "Times New Roman", Times, serif; }
     .encourage-text-cnt .encourage-text .moving-numbers0 {
       display: flex;
       justify-content: center;
@@ -210,13 +206,13 @@
       font-weight: bold;
       text-transform: lowercase;
       color: #00ed00;
-      font-size: 20px;
-      border: 1px solid brown; }
-      .encourage-text-cnt .encourage-text .moving-numbers0 p {
-        font-size: 20px;
-        text-transform: lowercase; }
-    .encourage-text-cnt .encourage-text strong {
-      font-size: 20px; }
+      font-size: 25px;
+      width: 90px;
+      height: 50px;
+      -webkit-transition: all, 0.2s, linear;
+      -moz-transition: all, 0.2s, linear;
+      -o-transition: all, 0.2s, linear;
+      transition: all, 0.2s, linear; }
     .encourage-text-cnt .encourage-text .moving-numbers1 {
       display: flex;
       justify-content: center;
@@ -224,13 +220,13 @@
       font-weight: bold;
       text-transform: lowercase;
       color: #00ed00;
-      font-size: 28px;
-      border: 1px solid brown; }
-      .encourage-text-cnt .encourage-text .moving-numbers1 p {
-        font-size: 20px;
-        text-transform: lowercase; }
-    .encourage-text-cnt .encourage-text strong {
-      font-size: 20px; }
+      font-size: 35px;
+      width: 90px;
+      height: 50px;
+      -webkit-transition: all, 0.2s, linear;
+      -moz-transition: all, 0.2s, linear;
+      -o-transition: all, 0.2s, linear;
+      transition: all, 0.2s, linear; }
     .encourage-text-cnt .encourage-text .moving-numbers2 {
       display: flex;
       justify-content: center;
@@ -238,13 +234,13 @@
       font-weight: bold;
       text-transform: lowercase;
       color: #00ed00;
-      font-size: 36px;
-      border: 1px solid brown; }
-      .encourage-text-cnt .encourage-text .moving-numbers2 p {
-        font-size: 20px;
-        text-transform: lowercase; }
-    .encourage-text-cnt .encourage-text strong {
-      font-size: 20px; }
+      font-size: 45px;
+      width: 90px;
+      height: 50px;
+      -webkit-transition: all, 0.2s, linear;
+      -moz-transition: all, 0.2s, linear;
+      -o-transition: all, 0.2s, linear;
+      transition: all, 0.2s, linear; }
     .encourage-text-cnt .encourage-text .moving-numbers3 {
       display: flex;
       justify-content: center;
@@ -252,13 +248,31 @@
       font-weight: bold;
       text-transform: lowercase;
       color: #00ed00;
-      font-size: 44px;
-      border: 1px solid brown; }
-      .encourage-text-cnt .encourage-text .moving-numbers3 p {
-        font-size: 20px;
-        text-transform: lowercase; }
-    .encourage-text-cnt .encourage-text strong {
-      font-size: 20px; }
+      font-size: 55px;
+      width: 90px;
+      height: 50px;
+      -webkit-transition: all, 0.2s, linear;
+      -moz-transition: all, 0.2s, linear;
+      -o-transition: all, 0.2s, linear;
+      transition: all, 0.2s, linear; }
+    .encourage-text-cnt .encourage-text .encourage-text-psc {
+      margin: auto auto auto 1px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px; }
+    .encourage-text-cnt .encourage-text .encourage-text-final {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      background-color: #00ed00;
+      border-radius: 10px;
+      margin-top: 30px;
+      padding: 5px;
+      height: 50px;
+      text-transform: uppercase;
+      font-size: 24px; }
 
 .advantage-class {
   height: 50vh;
