--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -5,6 +5,7 @@ $logo-SVG: url("./components/images/ultraTreningLogo1.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
 $backgroundMain2-SVG: url("./components/images/backgroundMain2.svg");
+$backgroundsection2-SVG: url("./components/images/backgroundsection2.svg");
 
 $break-to-adv-SVG: url("./components/images/break-to-adv.svg");
 $break-to-enco-SVG: url("./components/images/break-to-enco.svg");
