--- a/src/scss/partials/_homeStyle.scss
+++ b/src/scss/partials/_homeStyle.scss
@@ -80,7 +80,6 @@
 
 .encourage-class{
   height: 60vh;
-
 }
 #encourage-entry{
   background-image: $backgroundsection2-SVG;
@@ -90,7 +89,6 @@
 }
 
 .encourage-text-cnt{
-  // border:1px solid brown;
   width:100%;
   height: 100%;
   display: flex;
@@ -100,8 +98,6 @@
   .encourage-text{
     display: flex;
     flex-wrap: wrap;
-    // align-items: center;
-    // justify-content: center;
     margin: auto auto auto 20px;
     font-size: 30px;
     font-weight: bold;
@@ -148,12 +144,75 @@
 //SECTION 3 STYLING
 
 .advantage-class{
-  height: 50vh;
+  height: 100vh;
   background-image: $backgroundMain1-SVG;
   background-color: $main-color;
   background-size: contain;
 }
 
+.advantage-cnt{
+  border:1px solid blue;
+  .advantage-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin-top: 15px;
+    margin-left: 4px;
+    border:3px solid black;
+    height:40px;
+    width:200px;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-style: $main-font;
+  }
+  .advantage-text{
+    border:1px solid red;
+    .advantage-point{
+      border:1px solid orange;
+      height:66px;
+      width:100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      .advantage-text-no{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        background-color: white;
+        border-radius:20px;
+        margin-top: 15px;
+        border:3px solid black;
+        padding: 5px;
+        height:40px;
+        width:40px;
+        font-size: 30px;
+        font-style: $main-font;
+      }
+      .advantage-text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        background-color: white;
+        border-radius: 10px;
+        margin-top: 15px;
+        margin-left: 4px;
+        border:3px solid black;
+        padding: 5px;
+        height:40px;
+        width:200px;
+        font-size: 16px;
+        font-style: $main-font;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+    }
+
+  }
+}
 // FIXED BTN TO RETURN TO THE INITIAL POSITION
 
 .show-return-btn{
