improving  section 4 and 5  homepage

--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -6,6 +6,7 @@ $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
 $backgroundMain2-SVG: url("./components/images/backgroundMain2.svg");
 $backgroundsection2-SVG: url("./components/images/backgroundsection2.svg");
+$backgroundsection4-SVG: url("./components/images/backgroundsection4.svg");
 $broadBelt-SVG: url("./components/images/roadBelt.svg");
 
 $break-to-adv-SVG: url("./components/images/break-to-adv.svg");
