--- a/src/App.css
+++ b/src/App.css
@@ -127,24 +127,24 @@
   flex-direction: column; }
   .welcome-text-cnt .welcome-text {
     width: 100%;
-    margin: 140px auto auto auto; }
+    margin: 26vh auto auto auto; }
     .welcome-text-cnt .welcome-text p {
       margin: auto auto auto 20px;
-      font-size: 38px;
+      font-size: 6vh;
       font-weight: bold;
       font: Georgia, "Times New Roman", Times, serif;
       color: white; }
     .welcome-text-cnt .welcome-text .welcome-btn {
-      margin: 60px auto auto auto;
+      margin: 18vh auto auto auto;
       background-color: #00ed00;
-      width: 200px;
-      height: 60px;
+      width: 50vw;
+      height: 10vh;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 10px;
       text-transform: uppercase;
-      font-size: 18px;
+      font-size: 3vh;
       font-weight: bold; }
       .welcome-text-cnt .welcome-text .welcome-btn:hover {
         background-color: #00d700; }
@@ -156,7 +156,7 @@
       justify-content: center;
       align-items: center;
       color: black;
-      background-color: yellow;
+      background-color: white;
       width: 50px;
       height: 50px;
       border-radius: 30px;
@@ -166,14 +166,14 @@
 #welcome-encourage-break {
   margin-top: -3px;
   height: 10vh;
-  background-image: url("./components/images/break-to-encoMobile.svg");
+  background-image: url("./components/images/break-to-enco.svg");
   background-size: cover; }
 
 #encourage-advantage-break {
   margin-bottom: -3px;
   height: 10vh;
   background-position: center;
-  background-image: url("./components/images/break-to-advMobile.svg");
+  background-image: url("./components/images/break-to-adv.svg");
   background-size: cover; }
 
 .encourage-class {
@@ -196,7 +196,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: auto auto auto 20px;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
     font: Georgia, "Times New Roman", Times, serif; }
     .encourage-text-cnt .encourage-text .moving-numbers0 {
@@ -207,7 +207,7 @@
       text-transform: lowercase;
       color: #00ed00;
       font-size: 25px;
-      width: 90px;
+      width: 120px;
       height: 50px;
       -webkit-transition: all, 0.2s, linear;
       -moz-transition: all, 0.2s, linear;
@@ -220,8 +220,8 @@
       font-weight: bold;
       text-transform: lowercase;
       color: #00ed00;
-      font-size: 35px;
-      width: 90px;
+      font-size: 40px;
+      width: 120px;
       height: 50px;
       -webkit-transition: all, 0.2s, linear;
       -moz-transition: all, 0.2s, linear;
@@ -234,8 +234,8 @@
       font-weight: bold;
       text-transform: lowercase;
       color: #00ed00;
-      font-size: 45px;
-      width: 90px;
+      font-size: 55px;
+      width: 120px;
       height: 50px;
       -webkit-transition: all, 0.2s, linear;
       -moz-transition: all, 0.2s, linear;
@@ -248,8 +248,8 @@
       font-weight: bold;
       text-transform: lowercase;
       color: #00ed00;
-      font-size: 55px;
-      width: 90px;
+      font-size: 70px;
+      width: 120px;
       height: 50px;
       -webkit-transition: all, 0.2s, linear;
       -moz-transition: all, 0.2s, linear;
@@ -260,7 +260,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 50px; }
+      height: 60px; }
     .encourage-text-cnt .encourage-text .encourage-text-final {
       display: flex;
       justify-content: center;
@@ -291,20 +291,19 @@
     align-items: center;
     color: white;
     margin-top: 15px;
-    border: 4px solid white;
-    height: 40px;
+    height: 10vh;
     width: 96%;
-    font-size: 18px;
+    font-size: 3vh;
     text-transform: uppercase;
     font-weight: bold;
     font-style: Georgia, "Times New Roman", Times, serif;
     background-color: black; }
   .advantage-cnt .advantage-text {
     border: 1px solid red;
-    margin-bottom: 25px; }
+    margin-bottom: 14px; }
     .advantage-cnt .advantage-text .advantage-point {
       border: 1px solid orange;
-      height: 66px;
+      height: 13vh;
       width: 100%;
       display: flex;
       flex-wrap: wrap;
@@ -315,13 +314,13 @@
         align-items: center;
         color: black;
         background-color: white;
-        border-radius: 20px;
-        margin-top: 15px;
+        border-radius: 50%;
+        margin-top: 2px;
         border: 3px solid black;
         padding: 5px;
-        height: 40px;
-        width: 40px;
-        font-size: 30px;
+        height: 12vh;
+        width: 12vh;
+        font-size: 40px;
         font-style: Georgia, "Times New Roman", Times, serif; }
       .advantage-cnt .advantage-text .advantage-point .advantage-text {
         display: flex;
@@ -330,33 +329,30 @@
         color: black;
         background-color: white;
         border-radius: 10px;
-        margin-top: 15px;
+        margin-top: 2px;
         margin-left: 4px;
         border: 3px solid black;
         padding: 5px;
-        height: 40px;
-        width: 200px;
-        font-size: 16px;
+        height: 12vh;
+        width: 60vw;
+        font-size: 22px;
         font-style: Georgia, "Times New Roman", Times, serif;
         font-weight: bold;
         text-transform: uppercase; }
 
 #advantage-chain-break {
   height: 6vh;
-  background: repeating-linear-gradient(-45deg, #00ed00, #00ed00 10px, #000 10px, #000 20px);
-  background: -webkit-linear-gradient(-45deg, #00ed00, #00ed00 10px, #000 10px, #000 20px);
-  background: -o-linear-gradient(-45deg, #00ed00, #00ed00 10px, #000 10px, #000 20px);
-  background: -moz-linear-gradient(-45deg, #00ed00, #00ed00 10px, #000 10px, #000 20px); }
+  background: repeating-linear-gradient(90deg, #00ed00, #00ed00 30px, #000 30px, #000 90px);
+  background: -webkit-linear-gradient(90deg, #00ed00, #00ed00 30px, #000 30px, #000 90px);
+  background: -o-linear-gradient(90deg, #00ed00, #00ed00 30px, #000 30px, #000 90px);
+  background: -moz-linear-gradient(90deg, #00ed00, #00ed00 30px, #000 30px, #000 90px); }
 
-#safety-footer-break {
+.safety-footer-break {
   height: 6vh;
   background: repeating-linear-gradient(45deg, #00ed00, #00ed00 10px, #ffffff 10px, #ffffff 20px);
   background: -webkit-linear-gradient(45deg, #00ed00, #00ed00 10px, #ffffff 10px, #ffffff 20px);
   background: -o-linear-gradient(45deg, #00ed00, #00ed00 10px, #ffffff 10px, #ffffff 20px);
   background: -moz-linear-gradient(45deg, #00ed00, #00ed00 10px, #ffffff 10px, #ffffff 20px); }
-
-.chain-class {
-  background-color: white; }
 
 #chain-title {
   background-color: black;
@@ -369,6 +365,11 @@
   text-transform: uppercase; }
 
 .chain-cnt {
+  background-attachment: fixed;
+  background: repeating-linear-gradient(90deg, #00ed00, #00ed00 1px, #ffffff 1px, #ffffff 10px);
+  background: -webkit-linear-gradient(90deg, #00ed00, #00ed00 1px, #ffffff 1px, #ffffff 10px);
+  background: -o-linear-gradient(90deg, #00ed00, #00ed00 1px, #ffffff 1px, #ffffff 10px);
+  background: -moz-linear-gradient(90deg, #00ed00, #00ed00 1px, #ffffff 1px, #ffffff 10px);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -417,12 +418,11 @@
     height: 12vh;
     width: 100%;
     background-image: url("./components/images/roadBelt.svg");
-    border: 1px solid red;
     background-position: center; }
 
 .safety-class {
-  height: 70vh;
-  background-color: white; }
+  height: 40vh;
+  background-color: black; }
 
 .safety-cnt {
   display: flex;
@@ -438,16 +438,14 @@
     height: 10vh;
     font-size: 23px;
     font-weight: 600;
-    color: black;
-    border: 1px solid red; }
+    color: white; }
   .safety-cnt .safety-text {
+    margin-top: 0.5vh;
     font-weight: 600;
-    color: black;
+    color: #00ed00;
     height: 50vh;
-    height: 50vh;
-    font-size: 16px;
-    border: 1px solid red;
-    text-align: justify; }
+    font-size: 13px;
+    text-align: center; }
 
 .show-return-btn {
   background-color: #00ed00;
